Made plugin work in IE8 and IE7.
Pushed version to 1.0.1. IE7 works technically, but has still some
obvious layout/alignment bugs that may be fixed by conditional CSS
rules.

--- a/demo.html
+++ b/demo.html
@@ -98,7 +98,7 @@
         <p>
             Released under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>.
             Source on <a href="https://github.com/Pixabay/jQuery-tagEditor">Github</a> (<a href="https://github.com/Pixabay/jQuery-tagEditor#changelog">changelog</a>).
-            Compatible with jQuery 1.7.0+ in Firefox, Safari, Chrome, Opera, Internet Explorer 9+. No dependencies except the jQuery library.
+            Compatible with jQuery 1.7.0+ in Firefox, Safari, Chrome, Opera, Internet Explorer 8+. IE7 technically works, but no care has gone into CSS/layout bugs. No dependencies except the jQuery library.
         </p>
         <ul>
             <li>Lightweight: 9.3 kB of JavaScript - less than 3.4 kB gzipped</li>
