Corrected comment in demo's CSS styles

--- a/demo.html
+++ b/demo.html
@@ -38,7 +38,7 @@
         pre { padding: 15px 10px; font-size: .9em; color: #555; background: #edf3f8; }
         pre i { color: #aaa; } /* comments */
         pre b { font-weight: normal; color: #cf4b25; } /* strings */
-        pre em { color: #0c59e9; } /* strings */
+        pre em { color: #0c59e9; } /* numeric */
 
         /* Pure CSS */
         .pure-button { margin: 5px 0; text-decoration: none !important; }
