Spelling error corrected.

--- a/demo.html
+++ b/demo.html
@@ -114,7 +114,7 @@
 
         <h3>Usage</h3>
         <p>
-            Include the styleheet <span class="inline-code">jquery.tag-editor.css</span> in the <span class="inline-code">&lt;head&gt;</span> section of your HTML document - and the JavsScript file <span class="inline-code">jquery.tag-editor.min.js</span> after loading jQuery and optional jQuery UI sortable/autocomplete.
+            Include the stylesheet <span class="inline-code">jquery.tag-editor.css</span> in the <span class="inline-code">&lt;head&gt;</span> section of your HTML document - and the JavsScript file <span class="inline-code">jquery.tag-editor.min.js</span> after loading jQuery and optional jQuery UI sortable/autocomplete.
             Tag Editor accepts settings from an object of key/value pairs, and can be assigned to any text input field or textarea.
         </p>
         <pre>
