Corrected plugin name on demo.

--- a/demo.html
+++ b/demo.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div style="max-width:900px;padding:0 10px;margin:40px auto;text-align:center">
-        <h1>Tag Editor</h1>
+        <h1>tagEditor</h1>
         <h2>A powerful and lightweight tag editor plugin for jQuery.</h2>
         <a href="https://github.com/Pixabay/jQuery-tagEditor/archive/master.zip" class="pure-button pure-button-primary button-lg">Download</a>
         &nbsp;
