Updated demo page.

--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>jQuery tagEditor Plugin</title>
     <meta name="description" content="A lightweight and sophisticated tag editor for jQuery. Sortable, editable tags with cursor navigation, autocomplete, and callbacks.">
+    <link rel="shortcut icon" href="//pixabay.com/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
@@ -108,8 +109,8 @@
             <li>Graceful degradation if JavaScript is disabled</li>
         </ul>
         <p>
-            This plugin was developed by and for <a href="http://pixabay.com/">Pixabay.com</a> - an international repository for sharing free public domain images.
-            We have implemented this plugin in production and we share this piece of software - in the spirit of Pixabay - freely with others.
+            This plugin was developed by and for <a href="http://pixabay.com/">Pixabay.com</a> - an international repository for free Public Domain images.
+            We have implemented this piece of software in production and we share it - in the spirit of Pixabay - freely with others.
         </p>
 
         <h3>Usage</h3>
@@ -343,7 +344,10 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
 
     <div style="background:#fafafa;border-top:1px solid #eee;padding:15px;font-size:.9em">
         <div style="max-width:900px;margin:auto;padding:0 10px">
-            Released 2014 by <a href="http://pixabay.com/">Pixabay.com</a>
+            <a style="float:right;margin-left:20px" href="http://pixabay.com/en/service/about/">About Us</a>
+            <a style="float:right;margin-left:20px" href="http://pixabay.com/en/blog/">Blog</a>
+            <a style="float:right;margin-left:20px" href="http://goodies.pixabay.com/">More Goodies</a>
+            © <a href="http://pixabay.com/">Pixabay.com</a> / Simon Steinberger / Hans Braxmeier
         </div>
     </div>
 
