--- a/demo.html
+++ b/demo.html
@@ -77,13 +77,13 @@
     <div style="max-width:900px;padding:0 10px;margin:40px auto;text-align:center">
         <h1>tagEditor</h1>
         <h2>A powerful and lightweight tag editor plugin for jQuery.</h2>
-        <a tabindex="1" href="https://github.com/Pixabay/jQuery-tagEditor/archive/master.zip" class="pure-button pure-button-primary button-lg">Download</a>
+        <a href="https://github.com/Pixabay/jQuery-tagEditor/archive/master.zip" class="pure-button pure-button-primary button-lg">Download</a>
         &nbsp;
-        <a tabindex="2" href="https://github.com/Pixabay/jQuery-tagEditor" class="pure-button button-lg">View on GitHub</a>
+        <a href="https://github.com/Pixabay/jQuery-tagEditor" class="pure-button button-lg">View on GitHub</a>
     </div>
     <div style="border-top: 1px solid #eee;border-bottom:1px solid #eee;background:#fafafa;margin:30px 0;padding:20px 5px">
         <div style="padding :0 7px 0 5px;max-width:900px;margin:auto">
-            <textarea tabindex="3" id="hero-demo">example tags, sortable, autocomplete, edit in place, tab/cursor navigation, duplicate check, callbacks, copy-paste, placeholder, public methods, custom delimiter, graceful degradation</textarea>
+            <textarea id="hero-demo">example tags, sortable, autocomplete, edit in place, tab/cursor navigation, duplicate check, callbacks, copy-paste, placeholder, public methods, custom delimiter, graceful degradation</textarea>
         </div>
     </div>
     <div style="max-width:900px;margin:auto;padding:0 10px 50px">
@@ -134,11 +134,6 @@ $(<b>'input[type="text"]'</b>).tagEditor({ initialTags: [<b>'tag1'</b>, <b>'tag2
 
 <i>// use jQuery UI autocomplete</i>
 $(<b>'#my_textarea'</b>).tagEditor({ autocomplete: { <b>'source'</b>: <b>'/url/'</b>, minLength: <em>3</em> } });</pre>
-
-        <p>
-            If the input field or textarea has a <span class="inline-code">tabindex</span> attribute set that is greater than 0,
-            the tag editor will make use of this value.
-        </p>
 
         <h3>Settings</h3>
         <table>
