--- a/demo.html
+++ b/demo.html
@@ -92,7 +92,7 @@
             Released under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>.
             Source on <a href="https://github.com/Pixabay/jQuery-tagEditor">Github</a> (<a href="https://github.com/Pixabay/jQuery-tagEditor#changelog">changelog</a>).
             Compatible with jQuery 1.7.0+ in Firefox, Safari, Chrome, Opera, Internet Explorer 8+. IE7 technically works, but no care has gone into CSS/layout bugs.
-            tagEditor depends on accursoft's <a href="http://code.accursoft.com/caret">caret plugin</a> (1.1 kB minified).
+            tagEditor depends on accursoft's <a href="https://github.com/accursoft/caret">caret plugin</a> (1.1 kB minified).
         </p>
         <ul>
             <li>Lightweight: 8.5 kB of JavaScript - less than 3.2 kB gzipped</li>
