Added fb-root div.

--- a/demo.html
+++ b/demo.html
@@ -364,6 +364,7 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
         </div>
     </div>
 
+    <div id="fb-root"></div>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
     <script src="jquery.caret.min.js"></script>
