--- a/demo.html
+++ b/demo.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><html lang="en" prefix="og: http://ogp.me/ns#">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="utf-8">
     <title>jQuery tagEditor Plugin</title>
     <meta name="description" content="A lightweight and sophisticated tag editor for jQuery. Sortable, editable tags with cursor navigation, autocomplete, and callbacks.">
-    <link rel="shortcut icon" href="http://pixabay.com/favicon.ico">
+    <link rel="shortcut icon" href="https://pixabay.com/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/yahoo/pure-release/v0.6.0/pure-min.css">
     <style>
         body { margin: 0; padding: 0; border: 0; min-width: 320px; color: #777; }
         html, button, input, select, textarea, .pure-g [class *= "pure-u"] { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.02em; }
@@ -111,7 +111,7 @@
             <li>Graceful degradation if JavaScript is disabled</li>
         </ul>
         <p>
-            This plugin was developed by and for <a href="http://pixabay.com/">Pixabay.com</a> - an international repository for free Public Domain images.
+            This plugin was developed by and for <a href="https://pixabay.com/">Pixabay.com</a> - an international repository for free Public Domain images.
             We have implemented this piece of software in production and we share it - in the spirit of Pixabay - freely with others.
         </p>
 
@@ -155,8 +155,8 @@ $(<b>'#my_textarea'</b>).tagEditor({ autocomplete: { <b>'source'</b>: <b>'/url/'
             <tr><td>removeDuplicates</td><td><i>true</i></td><td>Automatically remove duplicate tags.</td></tr>
             <tr><td>clickDelete</td><td><i>false</i></td><td>Delete tags on right click and on Ctrl+click.</td></tr>
             <tr><td>animateDelete</td><td><i>175</i></td><td>Animate duration for deletion of tags in milliseconds. Set to 0 for non-animated removal.</td></tr>
-            <tr><td>sortable</td><td><i>true</i></td><td>If <a href="http://jqueryui.com/sortable/">jQuery UI sortable</a> is available and this option is set to <span class="inline-code">true</span>, tags are sortable by drag and drop.</td></tr>
-            <tr><td>autocomplete</td><td><i>null</i></td><td><a href="http://jqueryui.com/autocomplete/">jQuery UI autocomplete</a> options as key/value pairs object. If provided, jQuery UI autocomplete must be loaded additionally.</td></tr>
+            <tr><td>sortable</td><td><i>true</i></td><td>If <a href="https://jqueryui.com/sortable/">jQuery UI sortable</a> is available and this option is set to <span class="inline-code">true</span>, tags are sortable by drag and drop.</td></tr>
+            <tr><td>autocomplete</td><td><i>null</i></td><td><a href="https://jqueryui.com/autocomplete/">jQuery UI autocomplete</a> options as key/value pairs object. If provided, jQuery UI autocomplete must be loaded additionally.</td></tr>
 
             <tr><td colspan="3">&nbsp;</td></tr>
             <tr><th>Callbacks</th><th colspan="2"></th></tr>
@@ -195,7 +195,7 @@ $(<b>'#demo1'</b>).tagEditor({
 
         <h4>Autocomplete</h4>
         <p>
-            For enabling tag autocompletion, make sure to have <a href="http://jqueryui.com/autocomplete/">jQuery UI autocomplete</a> readily loaded.
+            For enabling tag autocompletion, make sure to have <a href="https://jqueryui.com/autocomplete/">jQuery UI autocomplete</a> readily loaded.
             You can then pass <i>any</i> options that work with UI autocomplete to your tagEditor settings.
         </p>
         <pre>
@@ -354,16 +354,16 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
         </div>
 
         <p style="border-top:1px solid #eee;padding-top:30px">Please report any bugs and issues at the <a href="https://github.com/Pixabay/jQuery-tagEditor">GitHub repositiory</a>.</p>
-        <p>This software is released as Open Source under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a> by <a href="http://pixabay.com/users/Simon/">Simon Steinberger / Pixabay.com</a>.</p>
+        <p>This software is released as Open Source under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a> by <a href="https://pixabay.com/users/Simon/">Simon Steinberger / Pixabay.com</a>.</p>
 
     </div>
 
     <div style="background:#fafafa;border-top:1px solid #eee;padding:15px;font-size:.9em">
         <div style="max-width:900px;margin:auto;padding:0 10px">
-            <a style="float:right;margin-left:20px" href="http://pixabay.com/en/service/about/">About Us</a>
-            <a style="float:right;margin-left:20px" href="http://pixabay.com/en/blog/">Blog</a>
-            <a style="float:right;margin-left:20px" href="http://goodies.pixabay.com/">More Goodies</a>
-            © <a href="http://pixabay.com/">Pixabay.com</a> / Simon Steinberger / Hans Braxmeier
+            <a style="float:right;margin-left:20px" href="https://pixabay.com/en/service/about/">About Us</a>
+            <a style="float:right;margin-left:20px" href="https://pixabay.com/en/blog/">Blog</a>
+            <a style="float:right;margin-left:20px" href="https://goodies.pixabay.com/">More Goodies</a>
+            © <a href="https://pixabay.com/">Pixabay.com</a> / Simon Steinberger / Hans Braxmeier
         </div>
     </div>
 
@@ -382,7 +382,7 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
             var term = request.term;
             if (term in cache) { response(cache[term]); return; }
             $.ajax({
-                url: 'http://query.yahooapis.com/v1/public/yql',
+                url: 'https://query.yahooapis.com/v1/public/yql',
                 dataType: 'JSONP',
                 data: { format: 'json', q: 'select * from xml where url="http://google.com/complete/search?output=toolbar&q='+term+'"' },
                 success: function(data) {
