--- a/demo.html
+++ b/demo.html
@@ -71,7 +71,7 @@
         .tag-editor .green-tag .tag-editor-tag { color: #45872c; background: #e1f3da; }
         .tag-editor .green-tag .tag-editor-delete { background-color: #e1f3da; }
     </style>
-    <link rel="stylesheet" href="jquery.tag-editor.css">
+    <link rel="stylesheet" href="jquery.json-tag-editor.css">
 </head>
 <body>
     <div style="max-width:900px;padding:0 10px;margin:40px auto;text-align:center">
@@ -368,10 +368,14 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
     </div>
 
     <div id="fb-root"></div>
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"
+            integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
+            integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
+            crossorigin="anonymous"></script>
     <script src="jquery.caret.min.js"></script>
-    <script src="jquery.tag-editor.js"></script>
+    <script src="jquery.json-tag-editor.js"></script>
     <script>
         // jQuery UI autocomplete extension - suggest labels may contain HTML tags
         // github.com/scottgonzalez/jquery-ui-extensions/blob/master/src/autocomplete/jquery.ui.autocomplete.html.js
