--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,6 @@
     <meta charset="utf-8">
     <title>jQuery tagEditor Plugin</title>
     <meta name="description" content="A lightweight and sophisticated tag editor for jQuery. Sortable, editable tags with cursor navigation, autocomplete, and callbacks.">
-    <link rel="shortcut icon" href="https://pixabay.com/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300">
     <link rel="stylesheet" href="https://cdn.rawgit.com/yahoo/pure-release/v0.6.0/pure-min.css">
@@ -75,11 +74,11 @@
 </head>
 <body>
     <div style="max-width:900px;padding:0 10px;margin:40px auto;text-align:center">
-        <h1>tagEditor</h1>
-        <h2>A powerful and lightweight tag editor plugin for jQuery.</h2>
-        <a href="https://github.com/Pixabay/jQuery-tagEditor/archive/master.zip" class="pure-button pure-button-primary button-lg">Download</a>
+        <h1>JSON Tag Editor</h1>
+        <h2>A powerful and lightweight tag editor plugin for jQuery based on <a href="https://goodies.pixabay.com/jquery/tag-editor/demo.html">jQuery tagEditor</a>.</h2>
+        <a href="https://github.com/alfonsomunozpomer/jQuery-JSON-TagEditor/archive/master.zip" class="pure-button pure-button-primary button-lg">Download</a>
         &nbsp;
-        <a href="https://github.com/Pixabay/jQuery-tagEditor" class="pure-button button-lg">View on GitHub</a>
+        <a href="https://github.com/alfonsomunozpomer/jQuery-JSON-TagEditor" class="pure-button button-lg">View on GitHub</a>
     </div>
     <div style="border-top: 1px solid #eee;border-bottom:1px solid #eee;background:#fafafa;margin:30px 0;padding:20px 5px">
         <div style="padding :0 7px 0 5px;max-width:900px;margin:auto">
@@ -90,7 +89,7 @@
         <h3>Overview and Features</h3>
         <p>
             Released under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>.
-            Source on <a href="https://github.com/Pixabay/jQuery-tagEditor">Github</a> (<a href="https://github.com/Pixabay/jQuery-tagEditor#changelog">changelog</a>).
+            Source on <a href="https://github.com/alfonsomunozpomer/jQuery-JSON-TagEditor">Github</a> (<a href="https://github.com/alfonsomunozpomer/jQuery-JSON-TagEditor#changelog">changelog</a>).
             Compatible with jQuery 1.7.0+ in Firefox, Safari, Chrome, Opera, Internet Explorer 8+. IE7 technically works, but no care has gone into CSS/layout bugs.
             tagEditor depends on accursoft's <a href="https://github.com/accursoft/caret">caret plugin</a> (1.1 kB minified).
         </p>
@@ -122,18 +121,18 @@
             tagEditor accepts settings from an object of key/value pairs, and can be assigned to any text input field or textarea.
         </p>
         <pre>
-$(selector).tagEditor({key1: value1, key2: value2});
+$(selector).jsonTagEditor({key1: value1, key2: value2});
 
 <i>// examples</i>
 
 <i>// assign tag editor to textarea - existing text will be used as initial tags</i>
-$(<b>'textarea'</b>).tagEditor();
+$(<b>'textarea'</b>).jsonTagEditor();
 
 <i>// assign tag editor to text input with initial tags</i>
-$(<b>'input[type="text"]'</b>).tagEditor({ initialTags: [<b>'tag1'</b>, <b>'tag2'</b>, <b>'tag3'</b>] });
+$(<b>'input[type="text"]'</b>).jsonTagEditor({ initialTags: [<b>'tag1'</b>, <b>'tag2'</b>, <b>'tag3'</b>] });
 
 <i>// use jQuery UI autocomplete</i>
-$(<b>'#my_textarea'</b>).tagEditor({ autocomplete: { <b>'source'</b>: <b>'/url/'</b>, minLength: <em>3</em> } });</pre>
+$(<b>'#my_textarea'</b>).jsonTagEditor({ autocomplete: { <b>'source'</b>: <b>'/url/'</b>, minLength: <em>3</em> } });</pre>
 
         <h3>Settings</h3>
         <table>
@@ -179,7 +178,7 @@ $(<b>'#my_textarea'</b>).tagEditor({ autocomplete: { <b>'source'</b>: <b>'/url/'
 
         <h4 style="margin-top:.5em">Basic settings</h4>
         <pre>
-$(<b>'#demo1'</b>).tagEditor({
+$(<b>'#demo1'</b>).jsonTagEditor({
     initialTags: [<b>'Hello'</b>, <b>'World'</b>, <b>'Example'</b>, <b>'Tags'</b>],
     delimiter: <b>', '</b>, <i>/* space and comma */</i>
     placeholder: <b>'Enter tags ...'</b>
@@ -199,7 +198,7 @@ $(<b>'#demo1'</b>).tagEditor({
             You can then pass <i>any</i> options that work with UI autocomplete to your tagEditor settings.
         </p>
         <pre>
-$(<b>'#demo2'</b>).tagEditor({
+$(<b>'#demo2'</b>).jsonTagEditor({
     autocomplete: {
         delay: 0, <i>// show suggestions immediately</i>
         position: { collision: 'flip' }, <i>// automatic menu position up/down</i>
@@ -212,48 +211,48 @@ $(<b>'#demo2'</b>).tagEditor({
 
         <h4>Public methods</h4>
         <pre>
-$(<b>'#demo3'</b>).tagEditor({
+$(<b>'#demo3'</b>).jsonTagEditor({
     initialTags: [<b>'Hello'</b>, <b>'World'</b>],
     placeholder: <b>'Enter tags ...'</b>
 });</pre>
         <div style="margin:0 0 1.2em"><textarea id="demo3"></textarea></div>
         <p>
-            <span onclick="alert($('#demo3').tagEditor('getTags')[0].tags);" class="ed_on pure-button button-sm">getTags</span>
-            <span onclick="$('#demo3').tagEditor('addTag', 'example');" class="ed_on pure-button button-sm">addTag 'example'</span>
-            <span onclick="$('#demo3').tagEditor('removeTag', 'example', true);" class="ed_on pure-button button-sm">removeTag 'example'</span>
+            <span onclick="alert($('#demo3').jsonTagEditor('getTags')[0].tags.map(function(e) {return JSON.stringify(e)}));" class="ed_on pure-button button-sm">getTags</span>
+            <span onclick="$('#demo3').jsonTagEditor('addTag', 'example');" class="ed_on pure-button button-sm">addTag 'example'</span>
+            <span onclick="$('#demo3').jsonTagEditor('removeTag', 'example', true);" class="ed_on pure-button button-sm">removeTag 'example'</span>
             <span id="remove_all_tags" class="ed_on pure-button button-sm">Remove all tags</span>
-            <span onclick="$('#demo3').tagEditor('destroy');$('.ed_on').hide();$('.ed_off').show();" class="ed_on pure-button button-sm">destroy</span>
-            <span onclick="$('#demo3').tagEditor({ placeholder: 'Enter tags ...' });$('.ed_off').hide();$('.ed_on').show();" class="ed_off pure-button button-sm" style="display:none">Init editor</span>
+            <span onclick="$('#demo3').jsonTagEditor('destroy');$('.ed_on').hide();$('.ed_off').show();" class="ed_on pure-button button-sm">destroy</span>
+            <span onclick="$('#demo3').jsonTagEditor({ placeholder: 'Enter tags ...' });$('.ed_off').hide();$('.ed_on').show();" class="ed_off pure-button button-sm" style="display:none">Init editor</span>
         </p>
         <pre>
 <i>// actions on button clicks</i>
 
 <i>// getTags</i>
-alert( $(<b>'#demo3'</b>).tagEditor(<b>'getTags'</b>)[0].tags );
+alert( $(<b>'#demo3'</b>).jsonTagEditor(<b>'getTags'</b>)[0].tags );
 
 <i>// addTag</i>
-$(<b>'#demo3'</b>).tagEditor(<b>'addTag'</b>, <b>'example'</b>);
+$(<b>'#demo3'</b>).jsonTagEditor(<b>'addTag'</b>, <b>'example'</b>);
 
 <i>// removeTag</i>
-$(<b>'#demo3'</b>).tagEditor(<b>'removeTag'</b>, <b>'example'</b>);
+$(<b>'#demo3'</b>).jsonTagEditor(<b>'removeTag'</b>, <b>'example'</b>);
 
 <i>// Remove all tags</i>
 function() {
-    var tags = $(<b>'#demo3'</b>).tagEditor(<b>'getTags'</b>)[0].tags;
-    for (i = 0; i &lt; tags.length; i++) { $(<b>'#demo3'</b>).tagEditor(<b>'removeTag'</b>, tags[i]); }
+    var tags = $(<b>'#demo3'</b>).jsonTagEditor(<b>'getTags'</b>)[0].tags;
+    for (i = 0; i &lt; tags.length; i++) { $(<b>'#demo3'</b>).jsonTagEditor(<b>'removeTag'</b>, tags[i]); }
 }
 <i>// working shortcut for removing all tags
 // $('#demo3').next('.tag-editor').find('.tag-editor-delete').click();</i>
 
 <i>// destroy</i>
-$(<b>'#demo3'</b>).tagEditor(<b>'destroy'</b>);
+$(<b>'#demo3'</b>).jsonTagEditor(<b>'destroy'</b>);
 
 <i>// re-init editor</i>
-$(<b>'#demo3'</b>).tagEditor({ placeholder: <b>'Enter tags ...'</b> });</pre>
+$(<b>'#demo3'</b>).jsonTagEditor({ placeholder: <b>'Enter tags ...'</b> });</pre>
 
         <h4>Callbacks</h4>
         <pre>
-$(<b>'#demo4'</b>).tagEditor({
+$(<b>'#demo4'</b>).jsonTagEditor({
     initialTags: [<b>'Hello'</b>, <b>'World'</b>],
     placeholder: <b>'Enter tags ...'</b>,
     onChange: function(field, editor, tags) {
@@ -280,7 +279,7 @@ $(<b>'#demo4'</b>).tagEditor({
             Use right mouse click or Ctrl+left click to delete tags.
         </p>
         <pre>
-$(<b>'#demo5'</b>).tagEditor({
+$(<b>'#demo5'</b>).jsonTagEditor({
     clickDelete: true,
     initialTags: [ ... ],
     placeholder: <b>'Enter tags ...'</b>
@@ -307,7 +306,7 @@ $(<b>'#demo5'</b>).tagEditor({
             Using the onChange callback for adding custom CSS classes to specific tags.
         </p>
         <pre>
-$(<b>'#demo6'</b>).tagEditor({
+$(<b>'#demo6'</b>).jsonTagEditor({
     initialTags: [<b>'custom'</b>, <b>'class'</b>, <b>'red'</b>, <b>'green'</b>, <b>'demo'</b>],
     onChange: tag_classes
 });
@@ -322,7 +321,7 @@ function tag_classes(field, editor, tags) {
 }
 
 <i>// first assign tag classes after initializing tagEditor; onChange is not called on init</i>
-tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
+tag_classes(null, $('#demo6').jsonTagEditor('getTags')[0].editor);</pre>
         <div style="margin:0 0 1.2em"><textarea id="demo6"></textarea></div>
         <p>
             In the onChange callback we iterate over all tags and assign custom CSS classes where appropriate.
@@ -405,26 +404,26 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
         }
 
         $(function() {
-            $('#hero-demo').tagEditor({
+            $('#hero-demo').jsonTagEditor({
                 placeholder: 'Enter tags ...',
                 autocomplete: { source: googleSuggest, minLength: 3, delay: 250, html: true, position: { collision: 'flip' } }
             });
 
-            $('#demo1').tagEditor({ initialTags: ['Hello', 'World', 'Example', 'Tags'], delimiter: ', ', placeholder: 'Enter tags ...' }).css('display', 'block').attr('readonly', true);
+            $('#demo1').jsonTagEditor({ initialTags: ['Hello', 'World', 'Example', 'Tags'], delimiter: ', ', placeholder: 'Enter tags ...' }).css('display', 'block').attr('readonly', true);
 
-            $('#demo2').tagEditor({
+            $('#demo2').jsonTagEditor({
                 autocomplete: { delay: 0, position: { collision: 'flip' }, source: ['ActionScript', 'AppleScript', 'Asp', 'BASIC', 'C', 'C++', 'CSS', 'Clojure', 'COBOL', 'ColdFusion', 'Erlang', 'Fortran', 'Groovy', 'Haskell', 'HTML', 'Java', 'JavaScript', 'Lisp', 'Perl', 'PHP', 'Python', 'Ruby', 'Scala', 'Scheme'] },
                 forceLowercase: false,
                 placeholder: 'Programming languages ...'
             });
 
-            $('#demo3').tagEditor({ initialTags: ['Hello', 'World'], placeholder: 'Enter tags ...' });
+            $('#demo3').jsonTagEditor({ initialTags: ['Hello', 'World'], placeholder: 'Enter tags ...' });
             $('#remove_all_tags').click(function() {
-                var tags = $('#demo3').tagEditor('getTags')[0].tags;
-                for (i=0;i<tags.length;i++){ $('#demo3').tagEditor('removeTag', tags[i]); }
+                var tags = $('#demo3').jsonTagEditor('getTags')[0].tags;
+                for (var i = 0 ; i < tags.length ; i++) { $('#demo3').jsonTagEditor('removeTag', tags[i].tagValue); }
             });
 
-            $('#demo4').tagEditor({
+            $('#demo4').jsonTagEditor({
                 initialTags: ['Hello', 'World'],
                 placeholder: 'Enter tags ...',
                 onChange: function(field, editor, tags) { $('#response').prepend('Tags changed to: <i>'+(tags.length ? tags.join(', ') : '----')+'</i><hr>'); },
@@ -437,7 +436,7 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
                 }
             });
 
-            $('#demo5').tagEditor({ clickDelete: true, initialTags: ['custom style', 'dark tags', 'delete on click', 'no delete icon', 'hello', 'world'], placeholder: 'Enter tags ...' });
+            $('#demo5').jsonTagEditor({ clickDelete: true, initialTags: ['custom style', 'dark tags', 'delete on click', 'no delete icon', 'hello', 'world'], placeholder: 'Enter tags ...' });
 
             function tag_classes(field, editor, tags) {
                 $('li', editor).each(function(){
@@ -447,8 +446,8 @@ tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor);</pre>
                     else li.removeClass('red-tag green-tag');
                 });
             }
-            $('#demo6').tagEditor({ initialTags: ['custom', 'class', 'red', 'green', 'demo'], onChange: tag_classes });
-            tag_classes(null, $('#demo6').tagEditor('getTags')[0].editor); // or editor == $('#demo6').next()
+            $('#demo6').jsonTagEditor({ initialTags: ['custom', 'class', 'red', 'green', 'demo'], onChange: tag_classes });
+            tag_classes(null, $('#demo6').jsonTagEditor('getTags')[0].editor); // or editor == $('#demo6').next()
         });
 
         if (~window.location.href.indexOf('http')) {
