--- a/demo.html
+++ b/demo.html
@@ -82,7 +82,8 @@
     </div>
     <div style="border-top: 1px solid #eee;border-bottom:1px solid #eee;background:#fafafa;margin:30px 0;padding:20px 5px">
         <div style="padding :0 7px 0 5px;max-width:900px;margin:auto">
-            <textarea id="hero-demo">example tags, sortable, autocomplete, edit in place, tab/cursor navigation, duplicate check, callbacks, copy-paste, placeholder, public methods, custom delimiter, graceful degradation</textarea>
+            <textarea id="hero-demo">
+                example tags&#09;sortable&#09;autocomplete&#09;edit in place&#09;tab/cursor navigation&#09;duplicate check&#09;callbacks&#09;copy-paste&#09;placeholder&#09;public methods&#09;custom delimiter&#09;graceful degradation</textarea>
         </div>
     </div>
     <div style="max-width:900px;margin:auto;padding:0 10px 50px">
